client/main.scss
/* ... */
#roundCornerButtonSeePrevTable:disabled {
    background: url("/images/button_see_prev_table_disabled.png") no-repeat;
    background-size: 100% 100%;
}

#roundCornerButtonClearPrevTable {
    background: url("/images/button_clear_prev_table.png") no-repeat;
    background-size: 100% 100%;
}

#roundCornerButtonClearPrevTable:hover {
    background: url("/images/button_clear_prev_table_hover.png") no-repeat;
    background-size: 100% 100%;
}

#roundCornerButtonUndo {
    background: url("/images/button_undo.png") no-repeat;
    background-size: 100% 100%;
}

#roundCornerButtonUndo:hover {
    background: url("/images/button_undo_hover.png") no-repeat;
    background-size: 100% 100%;
}

#roundCornerButtonUndo:disabled {
    background: url("/images/button_undo_disabled.png") no-repeat;
    background-size: 100% 100%;
}

/* Modal */

.modal,
.modalDelay {
    position: absolute;
    width: 500px;
    height: 250px;
    top: 57%;
    left: 50%;
    margin-left: -250px;
    margin-top: -125px;
    background-color: #FFC857;
    text-align: center;
    border-radius: 15px;
    box-shadow: 5px 5px 5px grey;
    z-index: 10000;
}

.overlay,
.overlayDelay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(255, 255, 255, 0.85);
    z-index: 10000;
}

.modal.error {
    background-color: #F3B3A6;
}

.modalDelay:focus,
.modal:focus {
    outline: none;
}

.modalBannerDiv {
    height: 50px;
    position: relative;
    padding-top: 10px;
    border-radius: 15px 15px 0px 0px;
    background-color: rgba(255, 255, 255, 0.35);
}

.modalBanner {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
}

.modalContent {
    width: 100%;
    height: 200px;
    padding-top: 25px;
    border-radius: 0px 0px 15px 15px;
    border-top: 3px solid white;
}

.modalContent p {
    font-size: 16px;
}

.modalWaitText {
    color: gray;
    font-style: italic;
}

/* Modal Transitions */

.modal {
    opacity: 0;
    transition: opacity 500ms ease-in-out;
}

.modalDelay {
    /* Add delay to modal appearing when if modal is asking user to restart after game ended, need to allow time to show wrap up animation */
    opacity: 0;
    transition: opacity 500ms ease-in-out;
    transition-delay: 3.5s;
}

.modalAfterOpen {
    opacity: 1;
}

.modalBeforeClose {
    opacity: 0;
}

.overlay {
    opacity: 0;
    transition: opacity 500ms ease-in-out;
}

.overlayDelay {
    opacity: 0;
    transition: opacity 500ms ease-in-out;
    transition-delay: 3.5s;
}

.overlayAfterOpen {
    opacity: 1;
}

.overlayBeforeClose {
    opacity: 0;
}

/* Card */

.handle {
    cursor: pointer;
}

.handle:hover {
    cursor: pointer;
    filter: brightness(90%);
}

.handle:active {
    cursor: pointer;
    margin: -3px;
    border: 3px solid orange;
    border-radius: 3px;
    filter: brightness(90%);
}

/* Animations */

/* NextArea */

.fadeSlideInOut-enter {
  opacity: 0;
  transform: translateX(-10px);
}

.fadeSlideInOut-enter-active {
  opacity: 1;
  transform: translateX(0px);
}

.fadeSlideInOut-exit {
  opacity: 1;
  transform: translateX(0px);
}

.fadeSlideInOut-exit-active {
  opacity: 0;
  transform: translateX(10px);
}

.fadeSlideInOut-enter-active,
.fadeSlideInOut-exit-active {
  transition: opacity 1000ms, transform 1000ms;
}

/* Di cards */

.slideIn-0-enter,
.slideIn-1-enter,
.slideIn-2-enter,
.slideIn-3-enter,
.slideIn-4-enter,
.slideIn-5-enter,
.slideInQuick-0-enter,
.slideInQuick-1-enter,
.slideInQuick-2-enter,
.slideInQuick-3-enter,
.slideInQuick-4-enter,
.slideInQuick-5-enter {
  transform: translateX(200%);
  opacity: 0;
}

.slideIn-0-enter-active,
.slideIn-1-enter-active,
.slideIn-2-enter-active,
.slideIn-3-enter-active,
.slideIn-4-enter-active,
.slideIn-5-enter-active,
.slideInQuick-0-enter-active,
.slideInQuick-1-enter-active,
.slideInQuick-2-enter-active,
.slideInQuick-3-enter-active,
.slideInQuick-4-enter-active,
.slideInQuick-5-enter-active {
  transform: translateX(0%);
  opacity: 1;
}

.slideIn-0-exit,
.slideIn-1-exit,
.slideIn-2-exit,
.slideIn-3-exit,
.slideIn-4-exit,
.slideIn-5-exit,
.slideInQuick-0-exit,
.slideInQuick-1-exit,
.slideInQuick-2-exit,
.slideInQuick-3-exit,
.slideInQuick-4-exit,
.slideInQuick-5-exit {
  opacity: 1;
}

.slideIn-0-exit-active,
.slideIn-1-exit-active,
.slideIn-2-exit-active,
.slideIn-3-exit-active,
.slideIn-4-exit-active,
.slideIn-5-exit-active,
.slideInQuick-0-exit-active,
.slideInQuick-1-exit-active,
.slideInQuick-2-exit-active,
.slideInQuick-3-exit-active,
.slideInQuick-4-exit-active,
.slideInQuick-5-exit-active {
  opacity: 0;
}

.slideIn-0-enter-active,
.slideIn-1-enter-active,
.slideIn-2-enter-active,
.slideIn-3-enter-active,
.slideIn-4-enter-active,
.slideIn-5-enter-active,
.slideInQuick-0-enter-active,
.slideInQuick-1-enter-active,
.slideInQuick-2-enter-active,
.slideInQuick-3-enter-active,
.slideInQuick-4-enter-active,
.slideInQuick-5-enter-active {
  transition: opacity 500ms, transform 500ms;
}

.slideIn-0-exit-active,
.slideIn-1-exit-active,
.slideIn-2-exit-active,
.slideIn-3-exit-active,
.slideIn-4-exit-active,
.slideIn-5-exit-active,
.slideInQuick-0-exit-active,
.slideInQuick-1-exit-active,
.slideInQuick-2-exit-active,
.slideInQuick-3-exit-active,
.slideInQuick-4-exit-active,
.slideInQuick-5-exit-active {
  transition: opacity 250ms;
  transition-delay: 0s;
}

.slideIn-0-enter-active {
    transition-delay: 0s;
}

.slideIn-1-enter-active {
    transition-delay: 1s;
}

.slideIn-2-enter-active {
    transition-delay: 2s;
}

.slideIn-3-enter-active {
    transition-delay: 3s;
}

.slideIn-4-enter-active {
    transition-delay: 4s;
}

.slideIn-5-enter-active {
    transition-delay: 5s;
}

.slideInQuick-0-enter-active {
    transition-delay: 0s;
}

.slideInQuick-1-enter-active {
    transition-delay: 0.25s;
}

.slideInQuick-2-enter-active {
    transition-delay: 0.5s;
}

.slideInQuick-3-enter-active {
    transition-delay: 0.75s;
}

.slideInQuick-4-enter-active {
    transition-delay: 1.0s;
}
/* ... */

